--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "googleapis": "^105.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.5.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.1"
   }
