--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "is-online": "^10.0.0",
+    "izimodal": "^1.6.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
@@ -21,7 +22,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.24",
