--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "proxy": "https://studentbe1.herokuapp.com",
   "dependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@hookform/resolvers": "^2.9.7",
+    "@mui/styled-engine-sc": "^5.10.1",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "faker": "^6.6.6",
     "is-online": "^10.0.0",
     "izimodal": "^1.6.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
